# task_manager

./: .Dockerfile.swp  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  newrelic.ini  pyproject.toml  query.txt
.github/workflows/: main.yml
client/: .eslintrc  package.json
main/: admin.py  serializers.py  views.py
main/migrations/: 0004_alter_task_deadline_alter_task_priority_and_more.py  0006_user_avatar_picture.py
main/models/: task.py
main/services/: single_resource.py  storage_backends.py
main/templates/emails/: base.html  notification.html
main/tests/: base.py  conftest.py  factories.py  test_admin.py  test_countdown.py  test_current_user.py  test_jwt.py  test_send_mail.py  test_tag.py  test_task.py  test_user.py
main/tests/test-views/: test_task_tags.py  test_user_tasks.py
task_manager/: celery.py  log_utils.py  settings.py  tasks.py  urls.py
