
[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["dbp"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
django = "^4.2"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^23.2"
drf-yasg = "^1.21.7"
freezegun = "^1.4.0"
factory-boy = "^3.3.0"
coveralls = "^4.0.1"
rollbar = "^1.0.0"
newrelic = "^9.13.0"
django-storages = "^1.14.4"
boto3 = "^1.35.5"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest-django = "^4.5.2"
factory-boy = "^3.3.0"
freezegun = "^1.4.0"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
